npm i react-native-elements --save

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "react": "17.0.1",
-    "react-native": "0.64.0"
+    "react-native": "0.64.0",
+    "react-native-elements": "^3.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
