--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.21.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
-    "react-native-elements": "^3.4.1"
+    "react-native-elements": "^3.4.1",
+    "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
