--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-elements": "^3.4.1",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
