--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-elements": "^3.4.1",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-vector-icons": "^8.1.0",
     "react-navigation": "^4.4.4"
   },
